[package]
name = "blissify"
version = "0.2.9"
authors = ["Polochon-street <polochonstreet@gmx.fr>"]
edition = "2018"
license = "GPL-3.0-only"
description = "An MPD plugin for creating smart playlists"
repository = "https://github.com/Polochon-street/blissify-rs"
keywords = ["audio", "song", "similarity", "playlist"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# might have to rm -rf /home/tuwtle/.cargo/git/db/bliss-rs-*
bliss-audio = { git = "file:///home/tuwtle/projects/bliss-rs"}
#bliss-audio = "0.5.2"
mpd = "0.0.12"
rayon = "1.5.0"
rusqlite = { version = "0.25.0", features = ["array", "bundled"] }
dirs = "3.0.1"
tempdir = "0.3.7"
clap = "2.33.3"
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.8.4"
indicatif = "0.16.2"
noisy_float = "0.2.0"
termion = "1.5.6"
